--- a/games/fnaf/index.html
+++ b/games/fnaf/index.html
@@ -3,295 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANTEQ99 - STRONA INTERNETOWA DLA SIGMY</title>
-    <style>
-        html, body{
-            padding: 0;
-            margin: 0;
-            background-color: black;
-            overflow: hidden;
-        }
-        #bg{
-            margin: auto;
-            width: 100vw;
-            height: 100vh;
-            background-color: black;
-            background-size: cover;
-            z-index: 0;
-            position: absolute;
-            top: 0px;
-        }
-        #warning{
-            width: 465px;
-            height: 124px;
-            margin: 20% auto auto auto;
-            background-image: url(graphics/warning.png);
-            opacity: 0%;
-            animation: appear 5s;
-        }
-        @keyframes appear{
-            0%{opacity: 0%;}
-            50%{opacity: 100%;}
-            100%{opacity: 0%;}
-        }
-        #static{
-            width: 100vw;
-            height: 100vh;
-            background-size: cover;
-            background-image: url(graphics/static.gif);
-            opacity: 0%;
-            position: absolute;
-            top: 0px;
-            z-index: 1;
-        }
-        #cmrglitch{
-            position: absolute;
-            top: 0px;
-            width: 100%;
-            height: 100vh;
-            background-size: cover;
-            opacity: 20%;
-            z-index: 2;
-        }
-        #glitchbar{
-            position: absolute;
-            top: -50px;
-            width: 100%;
-            height: 50px;
-            background-color: lightgray;
-            opacity: 20%;
-            animation: goingdown 20s linear 0s infinite ;
-            z-index: 3;
-        }
-        @keyframes goingdown{
-            0%{top: -50px;}
-            100%{top: 100%}
-        }
-        #menu{
-            margin-left: 200px;
-            height: 100vh;
-            position: absolute;
-            top: 0px;
-            z-index: 4;
-        }
-        #menutitle{
-            margin-top: 5vh;
-            width: 201px;
-            height: 212px;
-            background-image: url(graphics/menu/name.png);
-        }
-        #stars{
-            height: 55px;
-            background-image: url(graphics/menu/star.png);
-            background-repeat: space;
-        }
-        #modes > div{
-            margin: 50px 0 50px 0;
-        }
-        #newgame{
-            width: 203px;
-            height: 33px;
-            background-image: url(graphics/menu/newgame.png);
-        }
-        #continue{
-            width: 204px;
-            height: 34px;
-            background-image: url(graphics/menu/continue.png);
-            display: flex;
-        }
-        #continuen{
-            background-image: url(graphics/menu/continuen.png);
-            width: 63px;
-            height: 22px;
-            margin-top: 40px;
-        }
-        #continuenumb{
-            width: 18px;
-            height: 18px;
-            margin: 40px 0 0 10px;
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        #sixnight{
-            width: 227px;
-            height: 44px;
-            background-image: url(graphics/menu/sixnight.png);
-        }
-        #cnight{
-            width: 306px;
-            height: 44px;
-            background-image: url(graphics/menu/cnight.png);
-        }
-        #pointer{
-            width: 43px;
-            height: 26px;
-            background-image: url(graphics/menu/pointer.png);
-            margin-left: -75px;
-            margin-right: 32px;
-        }
-        button{
-            margin: auto;
-            width: 100%;
-            font-size: 80vh;
-            background-color: black;
-            color: red;
-            position: absolute;
-            z-index: 5;
-        }
-    </style>
+    <title>A99 | Pięć Nocy u Fryderyka</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-<button>PLAY</button>
-<div id="audio">
-    <audio id="menutheme" src="sounds/darkness music.wav" loop></audio>
-    <audio id="blip" src="sounds/blip.wav"></audio>
-    <audio id="staticsound" src="sounds/static.wav"></audio>
-</div>
-
-<script defer>
-    // elements to create
-    let bg = document.createElement("div");bg.id = "bg";
-    let warning = document.createElement("div");warning.id = "warning";
-    let static = document.createElement("div");static.id = "static";
-    let cmrglitch = document.createElement("div");cmrglitch.id = "cmrglitch";
-    let glitchbar = document.createElement("div");glitchbar.id = "glitchbar";
-    let menu = document.createElement("div");menu.id = "menu";
-    let menuTitle = document.createElement("div");menuTitle.id = "menutitle";menu.appendChild(menuTitle);
-    let stars = document.createElement("div");stars.id = "stars";menu.appendChild(stars);
-    let modes = document.createElement("section");modes.id = "modes";menu.appendChild(modes);
-    let newgame = document.createElement("div");newgame.id = "newgame";modes.appendChild(newgame);
-    let contgame = document.createElement("div");contgame.id = "continue";modes.appendChild(contgame);
-    let sixnight = document.createElement("div"); sixnight.id = "sixnight";
-    let cnight = document.createElement("div"); cnight.id = "cnight";
-    let pointer = document.createElement("div"); pointer.id = "pointer";newgame.appendChild(pointer);
-    //created elements
-    let fnaf1but = document.querySelector("button");
-    // sounds
-    let audioParent = document.querySelector("#audio")
-    let menuTheme = document.querySelector("#menutheme");
-    let blip = document.querySelector("#blip");
-    let staticSound = document.querySelector("#staticsound");
-    // variables
-    if(localStorage.getItem("night") == null){
-        localStorage.setItem("night","1");
-    }
-    let curnight = /*localStorage.getItem("night")*/ 7;
-    fnaf1but.addEventListener("click",function(){
-        fnaf1but.remove();
-        warning.id = "warning";
-        document.body.insertBefore(warning,audioParent);
-    })
-    warning.addEventListener("animationend",function(){
-        warning.remove();
-        setTimeout(() => {
-            mainmenu();
-            warning.removeEventListener("animationend",function(){});
-        }, 2000);
-    })
-    function mainmenu(){
-        soundPlay(menuTheme);
-        soundPlay(staticSound);
-        if(curnight>=5){
-            stars.style.setProperty("width",(70*(curnight-5))+"px");
-            modes.appendChild(sixnight);
-            if(curnight>6){
-                modes.appendChild(cnight);
-            }
-        }
-        document.body.insertBefore(bg,audioParent);
-        document.body.insertBefore(static,bg);
-        document.body.insertBefore(cmrglitch,static);
-        document.body.insertBefore(glitchbar,cmrglitch);
-        document.body.insertBefore(menu,glitchbar);
-        bg.style.setProperty("background-image","url(graphics/menu/1.png)");
-        static.style.setProperty("opacity","50%");
-        freddyAnim();
-        menuhover();
-        cmrglitches();
-    }
-    function freddyAnim(){
-        let ifmenu = document.querySelector("#menu");
-        if(ifmenu){
-            let rand = parseInt(Math.random()*2);
-            if(rand){
-                bg.style.setProperty("background-image","url(graphics/menu/2.png)");
-                setTimeout(() =>{
-                    bg.style.setProperty("background-image","url(graphics/menu/1.png)");
-                },100)
-            }
-            else{
-                bg.style.setProperty("background-image","url(graphics/menu/3a.png)");
-                setTimeout(() =>{
-                    bg.style.setProperty("background-image","url(graphics/menu/3b.png)");
-                },50)
-                setTimeout(() =>{
-                    bg.style.setProperty("background-image","url(graphics/menu/1.png)");
-                },100)
-            }
-            setTimeout(() =>{
-                freddyAnim();
-            },parseInt(Math.random()*2000+1000))
-        } 
-    }
-    function menuhover(){
-        let arr = modes.querySelectorAll("div");
-        let nght = document.createElement("section");nght.id = "continuen";
-        let numb = document.createElement("section");numb.id = "continuenumb";
-        for(let i = 0;i<arr.length;i++){
-            arr[i].addEventListener("mouseenter",function(){
-                if(pointer.parentElement != arr[i]){
-                    soundPlay(blip);
-                    arr[i].appendChild(pointer);
-                    if(i == 1){
-                    arr[1].appendChild(nght);
-                    arr[1].appendChild(numb);
-                    if(curnight < 5){
-                        numb.style.setProperty("background-image",`url(graphics/numb/${curnight}.png)`);
-                    }
-                    else{
-                        numb.style.setProperty("background-image",`url(graphics/numb/5.png)`);
-                    }
-                }
-                else{
-                    if(arr[1].querySelector("#continuen")){
-                    arr[1].removeChild(nght);
-                    arr[1].removeChild(numb);
-                    }
-                }
-                }
-            });
-            arr[i].addEventListener("click",function(){
-                switch(i){
-                    case 0: console.log("1");break;
-                    case 1: console.log("2-5");break;
-                    case 2: console.log("6");break;
-                    case 3: console.log("CN");break;
-                }
-            });
-        }
-    }
-    function cmrglitches(){
-        let ifmenu = document.querySelector("#menu")
-        if(ifmenu){
-            let glitch = parseInt(Math.random()*2);
-            let temp = parseInt(Math.random()*3);
-            if(!glitch){
-                cmrglitch.style.setProperty("background-image",`url(graphics/cmrglitch/${parseInt(Math.random()*11+1)}.png`);
-            }
-            else{
-                cmrglitch.style.setProperty("background-image",`none`);
-            }
-            bg.style.setProperty("opacity",parseInt(Math.random()*51+50)+"%");
-            static.style.setProperty("opacity",parseInt(Math.random()*30+40)+"%");
-            setTimeout(() =>{
-                cmrglitches();
-            },200)
-        }
-    }
-    function soundPlay(sound){
-        sound.load();
-        sound.play();
-    }
-</script>
-</body>
+    <main></main>
+    <button>PLAY</button>
+    <div id="audio">
+        <audio id="menutheme" src="sounds/darkness music.wav" loop></audio>
+        <audio id="blip" src="sounds/blip.wav"></audio>
+        <audio id="staticsound" src="sounds/static.wav"></audio>
+    </div>
 </html>
