--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
             20%{width: 1vw;height: 100px;}
             100%{width:80vw;}
         }
+        #contact{
+            width:10%;
+            height:5%;
+            position: absolute;
+            bottom:0px;
+            right:0px;
+            color:white;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +61,7 @@
     <footer>
         <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
     </footer>
+    <div id="contact"></div>
 </body>
 <script>
     let lStoreCorrect = ["cassino_money","fnaf1_night"];
