--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer>
         <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
     </footer>
-    <div id="contact"></div>
+    <div id="contact">antekking99@gmail.com</div>
 </body>
 <script>
     let lStoreCorrect = ["cassino_money","fnaf1_night"];
