--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -17,35 +18,55 @@
         header{
             margin: auto;
             color: red;
-            width: 80vw;
-            height: 100px;
-            padding: 1% 0 1% 0;
+            width: 90vw;
+            padding: 2% 0 2% 0;
             text-align: center;
             border-radius: 30px;
             box-shadow: inset red 0px 0px 60px 8px;
-            animation: k 2s;
+            animation: header 1s;
             overflow: hidden;
             text-wrap: nowrap;
         }
-        main{
+        @keyframes header{
+            0%{width: 1vw;font-size: 10%;}
+            50%{width: 30vw;font-size: 100%;}
+            100%{width:90vw;}
+        }
+        nav{
+            width: 80vw;
+            margin: auto;
             color: white;
+            font-size: 2em;
+            animation: nav 2s;
+            display: flex;
+        }
+        @keyframes nav{
+            0%{opacity: 0%;}
+            30%{opacity: 0%;}
+            100%{opacity: 100%;}
+        }
+        nav a{
+            color: red;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        #gry:hover{
+            background-color: red;
+            color: black;
+        }
+        main{
             width: 90%;
-            height: max-content;
-            text-align: center;
             margin: auto;
         }
-        @keyframes k{
-            0%{width: 1vw;height: 0px;}
-            20%{width: 1vw;height: 100px;}
-            100%{width:80vw;}
+        main iframe{
+            width: 90vw;
+            height: 60vh;
         }
-        #contact{
-            width:10%;
-            height:5%;
+        footer{
             position: absolute;
             bottom:0px;
-            right:0px;
             color:white;
+            animation: nav 2s;
         }
     </style>
 </head>
@@ -54,14 +75,15 @@
     <header>
         <h1>Strona główna</h1>
     </header>
+    <nav><a id="gry" href="https://elektryk.krosno.pl">Gry</a>
+    </nav>
     <main>
-        <a href="games/blackjack" style="font-size:5vw">Graj w blackjacka</a><br>
-        <a href="games/fnaf" style="font-size:5vw">Graj w Pięć Nocy u Fryderyka</a>
+        <iframe frameborder="0"></iframe>
     </main>
     <footer>
-        <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a></h4>
+        <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a> Kontakt: <a href="">antekking99@gmail.com</a></h4>
     </footer>
-    <div id="contact">antekking99@gmail.com</div>
+    <div id="contact"></div>
 </body>
 <script>
     let lStoreCorrect = ["cassino_money","fnaf1_night"];
