--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     <header>
         <h1>Strona główna</h1>
     </header>
-    <nav><a id="gry" href="https://elektryk.krosno.pl">Gry</a>
+    <nav><a id="gry" target="okno" href="games/index.html">Gry</a>
     </nav>
     <main>
-        <iframe frameborder="0"></iframe>
+        <iframe name="okno" frameborder="0"></iframe>
     </main>
     <footer>
         <h4>Sprawdź również: <a style="color: red;text-decoration: none;" href="https://mrbyrtek.github.io" target="_blank">MrByrtek</a> Kontakt: <a href="">antekking99@gmail.com</a></h4>
