--- a/games/index.html
+++ b/games/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main>
-        <a href="blackjack/index.html">Blackjack</a>
+        <a href="blackjack/index.html" target="_parent">Blackjack</a>
     </main>
 </body>
 </html>
