--- a/games/index.html
+++ b/games/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div{
+            width: 20vh;
+            height: 20vh;
+        }
+        #blackjack{
+            background-image: url(graphics/blackjack.png);
+        }
+    </style>
 </head>
 <body>
     <main>
-        <a href="blackjack/index.html" target="_parent">Blackjack</a>
+        <a href="blackjack/index.html" target="_parent"><div id="blackjack"></div></a>
     </main>
 </body>
 </html>
