--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,7 @@
         div{
             width: 20vh;
             height: 20vh;
-            background-image:cover;
+            background-size:cover;
         }
         #blackjack{
             background-image: url(graphics/blackjack.png);
