--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <main>
-        <a href="blackjack/index.html" target="_parent"><div id="blackjack"></div></a>
+        <div id="blackjack" onclick="window.location.assign('games/blackjack')"></div>
     </main>
 </body>
 </html>
