--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <main>
-        <div id="blackjack" onclick="window.location.assign('games/blackjack')"></div>
+        <div id="blackjack" onclick="window.location.assign('blackjack')"></div>
     </main>
 </body>
 </html>
