--- a/games/index.html
+++ b/games/index.html
@@ -9,6 +9,7 @@
             width: 20vh;
             height: 20vh;
             background-size:cover;
+            cursor: pointer;
         }
         #blackjack{
             background-image: url(graphics/blackjack.png);
