--- a/games/index.html
+++ b/games/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <main>
-        <div id="blackjack" onclick="window.location.assign('blackjack')"></div>
+        <div id="blackjack" onclick="window.open('blackjack')"></div>
     </main>
 </body>
 </html>
