--- a/games/index.html
+++ b/games/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        html,body{
+            width:100%;
+            height:100%;
+            margin:0;
+            padding:0;
+        }
         div{
-            width: 20vh;
-            height: 20vh;
+            width: 100vh;
+            height: 100vh;
             background-size:cover;
             cursor: pointer;
+            margin: auto;
         }
         #blackjack{
             background-image: url(graphics/blackjack.png);
